# cpp-template_cmake-gtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
src/: CMakeLists.txt
src/app/: Config.cpp  Config.hpp  main.cpp
tests/: CMakeLists.txt
tests/unit/core/: MatrixTests.cpp  QuaternionTests.cpp  Vector3DTests.cpp
